# mind

./: .gitignore  README.md  custom_exception.py  gui_elements.py  last_esp32_ip.txt  main.py  mind.txt  new updates.txt  project_structure  pyproject.toml  speech_handling.py  test.py  time_manager.db  times_dates_manager.py  todos.txt  weather_updater.py
.txt_files/: mind.txt
adapters/: esp32_adapter.py  llm_gemini_adapter.py  llm_smollm2_adapter.py  output_sound.py  test.py
adapters/esp32_adapters/: __init__.py  dummy_esp.py
adapters/flask_adapters/: main.py
adapters/kivy_adapters/: __init__.py
adapters/llm_adapters/: llm_adapter.py  llm_gemini_adapter.py  llm_smollm2_adapter.py  llm_without_agnetv1.py
adapters/pywebview_adapters/: main.py
adapters/viewer/: ssd1306_viewer.py  testing_display.py
core/: agent.py  loop.py  tool_registry.py
features/: database_connector.ipynb  skilltracker.py  time_manager.db  times_dates_manager.py  total_time_allocated.py
main/: entry.py  no_llm.py  pywebview_entry.py
memory/: memory.db
other_files/: kivy_eyes.py  roboeyes_widget.py
other_files/gem_kivy/: main.py
others/: testing_pretrained.ipynb  testing_pretrained.py
ports/: act_port.py  decision_making.py
requirements/: by_hitomi3_11requirements.txt  hitomi_list.txt
temp_files/: gemini_test.ipynb  just_json.json  langgraph.ipynb  ollama_test.ipynb  smolvlm2.ipynb  test_mp3_playback.py  test_speaker.py  time_tools_testing.py  udp_init_test.py
time_tools/: clock.py  pomodoro.py  stopwatch.py  timer.py
tools/: __init__.py  tool_registry.py
utilities/: logging_handler.py
utils/: __init__.py  logging_handler.py  time_conversions.py  time_date_formatter.py
(+175 files in other folders)
