[project]
name = "mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=16.0.1",
    "fastapi>=0.124.0",
    "mujoco>=3.4.0",
    "opencv-python>=4.12.0.88",
    "pywebview>=6.1",
    "sounddevice>=0.5.3",
    "torch>=2.9.1",
    "uvicorn[standard]>=0.38.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[tool.setuptools.packages.find]
where = ["src"]
